# FireFinance

./: README.md  me.velocitynet.FireFinance.json  meson.build
data/: me.velocitynet.FireFinance.desktop.in  me.velocitynet.FireFinance.gschema.xml  me.velocitynet.FireFinance.metainfo.xml.in  me.velocitynet.FireFinance.service.in  meson.build
data/icons/: meson.build
po/: POTFILES.in  meson.build
src/: chart_widget.py  data_manager.py  firefinance.gresource.xml  firefinance.in  main.py  meson.build  models.py  price_service.py  window.py
